# nightcrawler-mitm

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: skeleton.py
nightcrawler/: __init__.py  addon.py  config.py  crawler.py  idor_scanner.py  passive_scanner.py  runner.py  sqli_scanner.py  utils.py  websocket_handler.py  xss_scanner.py
nightcrawler/active_scans/: __init__.py  base.py  command_injection.py  discovery.py  idor_scanner.py  open_redirect.py  sqli_scanner.py  template_injection.py  traversal.py  xss_scanner.py
nightcrawler/passive_scans/: __init__.py  base.py  content.py  cookies.py  headers.py  javascript.py  jwt.py  websockets.py
tests/: conftest.py  test_active_command_injection.py  test_active_discovery.py  test_active_open_redirect.py  test_active_template_injection.py  test_active_traversal.py  test_addon_commands.py  test_crawler.py  test_idor_scanner.py  test_passive_content.py  test_passive_headers.py  test_passive_javascript.py  test_passive_websockets.py  test_sqli_scanner.py  test_xss_scanner.py
