[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nightcrawler-mitm"
# The version is now dynamic and will be read from the source code
dynamic = ["version"]
description = "A mitmproxy addon for background passive analysis, crawling, and active scanning, co-developed with AI."
readme = "README.txt"
requires-python = ">=3.9"
authors = [ { name = "thesp0nge", email = "your.email@example.com" }, ]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Security",
]
keywords = ["mitmproxy", "security", "scanner", "proxy", "pentest", "xss", "sqli", "crawler", "addon"]
dependencies = [
    "mitmproxy>=10.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.10.0",
    "PyYAML>=6.0",
]
[project.urls]
"Homepage" = "https://github.com/thesp0nge/nightcrawler-mitm"
"Repository" = "https://github.com/thesp0nge/nightcrawler-mitm"
"Bug Tracker" = "https://github.com/thesp0nge/nightcrawler-mitm/issues"
[project.scripts]
nightcrawler = "nightcrawler.runner:main"

# --- ADDED: This tells setuptools where to find the dynamic version ---
[tool.setuptools.dynamic]
version = {attr = "nightcrawler.__version__"}
# --------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = auto
