[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nightcrawler-mitm"
# The version is now hardcoded again for stability
version = "0.11.0"
description = "A mitmproxy addon for background passive analysis, crawling, and basic active scanning, designed as a security researcher's sidekick."
readme = "README.md"
requires-python = ">=3.9"
authors = [ { name = "thesp0nge", email = "your.email@example.com" }, ]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Security",
]
keywords = ["mitmproxy", "security", "scanner", "proxy", "pentest", "xss", "sqli", "crawler", "addon"]
dependencies = [
    "mitmproxy>=10.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.10.0",
    "PyYAML>=6.0",
]
[project.urls]
"Homepage" = "https://github.com/thesp0nge/nightcrawler-mitm"
"Repository" = "https://github.com/thesp0nge/nightcrawler-mitm"
"Bug Tracker" = "https://github.com/thesp0nge/nightcrawler-mitm/issues"
[project.scripts]
nightcrawler = "nightcrawler.runner:main"

# The [tool.setuptools.dynamic] section has been completely removed.

[tool.pytest.ini_options]
asyncio_mode = "auto"
